# cpv

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
complex_rotators/: plotting.py
complexrotators/: __init__.py  cometmodel.py  fit_dips_beta.py  getters.py  helpers.py  isochroneinterp.py  lcprocessing.py  modelfitter.py  observability.py  paths.py  plotting.py  sedfit.py  toy_physics.py
drivers/: HOWTO.md  assess_tess_holdings.py  build_4029_mask.py  calc_DBSP_resolution_velocity_table.py  calc_HIRES_systemic_velocities.py  calc_alfven_radius_estimate.py  calc_boundfree_absorption_coefficients.py  calc_clump_mass_lowerbound_dust.py  calc_clump_mass_lowerbound_gas.py  calc_continuum_energies.py  calc_corotation_radii.py  calc_dust_blackbody_sedfitting_ratios.py  calc_dust_mass_guess.py  calc_dust_mass_upperlimit_guess.py  calc_max_amplitude_sinusoid_rv_timeseries.py  calc_sini_guess.py  calc_tdur_pointsource.py  check_22b_observability.py  check_23b_observability.py  dbsp_cleaning.py  dbsp_get_ew_timeseries.py  estimate_mdot.py  estimate_nominal_cpv_parameters.py  find_CPVs.py  find_transits.py  fit_emission_specriver.py  fraction_coverage.py  get_24a_info.py  get_24b_info.py  get_25a_info.py  get_26b_info.py  get_QLP_closesubset.py  get_QLP_gaiainfo.py  get_ew_timeseries.py  get_gaia_X_spoc2min_merge.py  get_macosx_tags.sh  get_selection_function_values.py  get_spoc2min_gaiainfo.py  get_spoc2min_metadata.py  get_tess_data.py  (+55 more)
notebooks/: 20220719_TIC59129133_Alex_LAH_interact.ipynb  20221218_orion_EBs.ipynb  20230524_TIC289840928_icicles.ipynb  (+4 more)
(+93 files in other folders)
