[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpv"
version = "0.1.0"
description = "cpv"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Bouma" },
]
dependencies = [
    "numpy==2.2.6",
    "astropy==7.1.0",
    "numba==0.61.2",
    "wotan==1.10",
    "pandas==2.3.0",
    "matplotlib==3.10.3",
    "pytest==9.0.2",
    "astroquery",
    "fsspec",
    "s3fs",
    "tess-point",
    "ipython",
    "lightkurve",
    "pyarrow",
]

[project.urls]
Homepage = "https://github.com/lgbouma/cpv"

[tool.setuptools.packages.find]
include = ["cpv", "cpv.*", "complexrotators", "complexrotators.*"]

[tool.pytest.ini_options]
markers = [
    "network: requires network connectivity to external services",
]
